                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 03-01-2006 fixed: Sort order in My Pictures
 - 02-01-2006 changed: moved list/thumb label formating to media window base class
 - 02-01-2006 changed: moved item caching out of music nav and files into the FileItemList
 - 02-01-2006 fixed: Rumble controller option caused crashes with analog buttons.
 - 01-01-2006 fixed: mplayer.dll - some files with mp3 audio was misdetected and played only static.
 - 01-01-2006 fixed: duplicate string id resulting in "Target Temperature" incorrectly displayed in System Info
 - 30-12-2005 added: http api "getshares" and "getmedialocation" now accept "files" as a share type
 - 30-12-2005 fixed: Port numbers in Karaoke settings didn't match port numbers in System Info.
 - 30-12-2005 changed: Skin slide start positions are relative as of skin version 1.86.  PM3 updated to 1.86
 - 30-12-2005 added: Conditional window origins for dialogs.
 - 30-12-2005 fixed: [1387719] Stacking of non-english names.
 - 30-12-2005 fixed: Seek to end of song with right thumb stick resulted in the current song details not being updated.
 - 30-12-2005 added: Builtin functions SetVolume(percent) and Mute.
 - 30-12-2005 added: Info values for Player.GetVolume (int + label) and for Player.IsMuted (bool)
 - 30-12-2005 fixed: Some out effects or later in effects wouldn't render for some controls.
 - 30-12-2005 fixed: [1391885] - Extracting rar in my files with the copy reproduces bad dirs.
 - 30-12-2005 fixed: possible buffer overflows in some IFile::ReadString implementations
 - 30-12-2005 changed: moved dvd tray state to media window base class